# tinyLanguageParser

./: CMakeLists.txt  Dockerfile  EBNF_grammar_Tiny.txt  README.md  generatedAST.json  log.txt  worklog.txt
src/: headersGeneralizer.h  invalidTests.cpp  invalidTests.h  logger.cpp  logger.h  main.cpp  main.h  script.txt  validTests.cpp  validTests.h
src/AST_checker/: assignementNode.cpp  assignementNode.h  astNode.cpp  astNode.h  declarationNode.cpp  declarationNode.h  variableNode.cpp  variableNode.h
src/Image_convertor/: imageGenerator.cpp  imageGenerator.h
src/Lexical_checker/: EBNFlexer.cpp  EBNFlexer.h  lexer.cpp  lexer.h  tokenizer.cpp  tokenizer.h
src/Overflow_checker/: overflower.cpp  overflower.h
src/Semantic_checker/: semanticer.cpp  semanticer.h
src/SymbolTable_checker/: symbolTable.cpp  symbolTable.h
src/Syntax_checker/: EBNFchecker.cpp  EBNFchecker.h  EBNFparser.cpp  EBNFparser.h  parser.cpp  parser.h  programNode.cpp  programNode.h
src/Syntax_checker/EBNF/: EBNFchecker.cpp  EBNFchecker.h  EBNFparser.cpp  EBNFparser.h
src/Syntax_checker/Script/: parser.cpp  parser.h
tests/: invalidTests.cpp  invalidTests.h  validTests.cpp
